# ros2-mobile-manipulator-isaacsim

./: .gitignore  CLAUDE.md  README.md  my_slam_params.yaml
Map/: point_cloud_map.rviz
src/: frames_2026-05-08_19.20.06.gv
src/constructbot_description/: custom_slam_node.py  package.xml  setup.cfg  setup.py
src/constructbot_description/config/: slam_toolbox_params.yaml
src/constructbot_description/launch/: display.launch.py  rsp_sim.launch.py
src/constructbot_description/scripts/: arm_joint_controller.py  map_builder.py  pick_place_state_machine.py  pose_estimator.py  tf_to_joint_states.py
src/constructbot_description/urdf/: snehbot.urdf  snehbot.urdf.backup
src/constructbot_moveit_config/: CMakeLists.txt  package.xml
src/constructbot_moveit_config/config/: constructbot.srdf  controllers.yaml  joint_limits.yaml  kinematics.yaml
src/constructbot_moveit_config/launch/: moveit.launch.py
src/csm/sm/lib/json-c/: bits.h
src/documentation/: ConstructBot_Robotics_Reference.md  constructbot_arm_workspace.html
src/ros2_laser_scan_matcher/: CMakeLists.txt
src/ros2_laser_scan_matcher/include/ros2_laser_scan_matcher/: laser_scan_matcher.h
src/rviz2_config/: mobilebot.rviz
