<?xml version="1.0"?>
<package format="3">
  <name>constructbot_description</name>
  <version>0.0.0</version>
  <description>ConstructBot robot description package</description>
  <maintainer email="sneh@example.com">sneh</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
