<?xml version="1.0"?>
<package format="3">
  <name>constructbot_moveit_config</name>
  <version>0.0.1</version>
  <description>MoveIt2 config for ConstructBot arm</description>
  <maintainer email="sneh@todo.todo">sneh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>constructbot_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
