cmake_minimum_required(VERSION 3.5)
project(ros2_laser_scan_matcher)
set(CMAKE_CXX_STANDARD 14)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
include_directories(include ../csm/sm/csm ../csm/sm ../csm/sm/lib/json-c ../csm/sm/lib)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../install/csm/lib)
add_executable(laser_scan_matcher src/laser_scan_matcher.cpp)
target_link_libraries(laser_scan_matcher rclcpp::rclcpp sensor_msgs::sensor_msgs__rosidl_typesupport_cpp geometry_msgs::geometry_msgs__rosidl_typesupport_cpp nav_msgs::nav_msgs__rosidl_typesupport_cpp tf2_ros::tf2_ros tf2_geometry_msgs::tf2_geometry_msgs csm gsl gslcblas)
ament_target_dependencies(laser_scan_matcher rclcpp sensor_msgs geometry_msgs nav_msgs tf2 tf2_ros tf2_geometry_msgs)
install(TARGETS laser_scan_matcher DESTINATION lib/${PROJECT_NAME})
ament_package()
